--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "background_color": "#08525d",
+  "background_color": "#6b5b95",
   "display": "standalone",
   "icons": [{
     "src": "icon.png",
